feat: javaagentv1.0.0