@@ -12,70 +12,45 @@
 
     <artifactId>javaagent</artifactId>
 
-    <properties>
-        <asm.version>9.5</asm.version>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm-util</artifactId>
-            <version>${asm.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm-commons</artifactId>
-            <version>${asm.version}</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.sun/tools -->
-        <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.5.0</version>
-            <scope>system</scope>
-            <systemPath>${JAVA_HOME}/lib/tools-1.5.0.jar</systemPath>
-        </dependency>
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.6.0</version>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
                     <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
                         <manifest>
-                            <!-- 自动添加META-INF/MANIFEST.MF -->
                             <addClasspath>true</addClasspath>
                         </manifest>
                         <manifestEntries>
+                            <Created-By>zlhywlf</Created-By>
                             <Main-Class>zlhywlf.javaagent.Main</Main-Class>
                             <Agent-Class>zlhywlf.javaagent.Main</Agent-Class>
                             <Premain-Class>zlhywlf.javaagent.Main</Premain-Class>
-                            <!-- true表示能重定义此代理所需的类，默认值为 false -->
                             <Can-Redefine-Classes>true</Can-Redefine-Classes>
-                            <!-- true 表示能重转换此代理所需的类，默认值为 false -->
                             <Can-Retransform-Classes>true</Can-Retransform-Classes>
-                            <!-- true表示能设置此代理所需的本机方法前缀，默认值为 false -->
                             <Can-Set-Native-Method-Prefix>true</Can-Set-Native-Method-Prefix>
                         </manifestEntries>
                     </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>
+                            --add-exports=java.base/jdk.internal.org.objectweb.asm=zlhywlf.javaagent
+                        </arg>
+                        <arg>
+                            --add-exports=java.base/jdk.internal.org.objectweb.asm.tree=zlhywlf.javaagent
+                        </arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
